# KiroHub

./: .gitignore  CLAUDE.md  README.md  README_ru-RU.md  README_zh-CN.md  SECURITY_TESTS.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
locales/: en-US.json  ru-RU.json  zh-CN.json
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: account.rs  auth.rs  aws_sso_client.rs  browser.rs  constants.rs  crypto.rs  deep_link_handler.rs  kiro.rs  kiro_auth_client.rs  main.rs  powers.rs  steering.rs  validation.rs
src-tauri/src/commands/: account_cmd.rs  app_settings_cmd.rs  auth_cmd.rs  batch_import_cmd.rs  machine_guid_cmd.rs  mod.rs  sso_import_cmd.rs  update_cmd.rs  web_oauth_cmd.rs
src-tauri/src/providers/: web_oauth.rs
src/components/: About.jsx  AuthCallback.jsx  Settings.jsx
src/components/AccountManager/: AccountCard.jsx  AccountRow.jsx  AccountTable.jsx  ImportAccountModal.jsx  index.jsx
src/components/MCPManager/: MCPServerCard.jsx
src/contexts/: AppSettingsContext.jsx
src/utils/: constants.js
