[package]
name = "kirohub"
version = "1.3.0"
description = "KiroHub - Kiro IDE Account Manager"
authors = ["CPU-JIA"]
license = "GPL-3.0"
repository = "https://github.com/CPU-JIA/KiroHub"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
# Tauri 插件 - 使用明确的最小版本约束
tauri-plugin-shell = ">=2.2.1"      # CVE-2025-31477 修复
tauri-plugin-process = ">=2.3"
tauri-plugin-updater = ">=2.9"
tauri-plugin-opener = ">=2.5"
tauri-plugin-dialog = ">=2.4"
tauri-plugin-fs = ">=2.4"
tauri-plugin-deep-link = ">=2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "sync", "io-util", "time", "macros", "rt-multi-thread"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
url = "2.5"
open = "5.0"
tiny_http = "0.12"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"
ciborium = "0.2"
regex = "1.10"
hex = "0.4"
cookie = "0.18"
rusqlite = { version = "0.31", features = ["bundled"] }
async-trait = "0.1"
dirs = "5"
futures = "0.3"

# 加密相关依赖
chacha20poly1305 = "0.9"
pbkdf2 = "0.11"
hmac = "0.12"
zeroize = "1.6"
# 强制使用旧版 base64ct 避免 Rust 1.85 要求
base64ct = "=1.6.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
